test/libsolidity/syntaxTests/metaTypes/typeNotRegularIdentifierStateVariable.sol
contract Test {
    uint type;
}
// ----
// ParserError: (25-29): Expected identifier but got 'type'
